--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
               value="Colima 242, Roma Norte, Cuauhtémoc, CDMX"
               class="input-line"
             />
-            <button class="icon-round">📍</button>
+            <button id="btn-use-location" class="icon-round">📍</button>
+
           </div>
 
           <!-- Mapa -->
