--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>PAWGO</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <div class="app-wrapper">
     <main class="phone-frame">
@@ -15,9 +16,7 @@
         <div class="screen-content">
           <h1 class="app-title app-title-center">PAWGO</h1>
 
-          <!-- Logo -->
           <div class="logo-box">
-            <!-- Reemplaza por tu logo si quieres -->
             <span class="logo-paws">🐾🐾</span>
           </div>
 
@@ -30,23 +29,15 @@
 
           <div class="block">
             <p class="section-title">Crear cuenta</p>
-            <p class="section-subtitle">
-              Click en continuar para registrarte.
-            </p>
+            <p class="section-subtitle">Haz clic en continuar para registrarte.</p>
             <button class="btn btn-primary" data-next="screen-register-1">
               Continuar
             </button>
           </div>
-
-          <p class="legal-text">
-            Al hacer clic en continuar, aceptas nuestros
-            <a href="#">Términos de servicio</a> y
-            <a href="#">Política de privacidad</a>.
-          </p>
         </div>
       </section>
 
-      <!-- PANTALLA 2: REGISTRO DATOS BÁSICOS -->
+      <!-- PANTALLA 2: REGISTRO 1 - DATOS -->
       <section id="screen-register-1" class="screen">
         <header class="screen-header">
           <button class="back-btn" data-next="screen-welcome">←</button>
@@ -55,11 +46,24 @@
 
         <div class="screen-content">
           <h2 class="screen-title">Regístrate</h2>
-          <p class="field-group-title">Nombre</p>
+
+          <!-- Selección de Rol -->
+          <p class="field-group-title">Tipo de cuenta</p>
+          <div class="field">
+            <label>
+              <input type="radio" name="rol" value="cliente" checked />
+              Cliente (dueño de mascotas)
+            </label>
+            <label>
+              <input type="radio" name="rol" value="cuidador" />
+              Cuidador (walker)
+            </label>
+          </div>
 
           <form id="form-register-1" novalidate>
+            <p class="field-group-title">Nombre</p>
             <label class="field">
-              <span class="field-label">Ingresar nombre(s)</span>
+              <span class="field-label">Nombre(s)</span>
               <input type="text" name="nombres" placeholder="Ingresar nombre(s)" required />
             </label>
 
@@ -76,7 +80,7 @@
             </div>
 
             <label class="field">
-              <span class="field-label">Ingresar correo electrónico</span>
+              <span class="field-label">Correo electrónico</span>
               <input type="email" name="correo" placeholder="Ingresar correo" required />
             </label>
 
@@ -97,7 +101,7 @@
         </div>
       </section>
 
-      <!-- PANTALLA 3: REGISTRO DATOS DE CONTACTO -->
+      <!-- PANTALLA 3: REGISTRO 2 - DIRECCIÓN -->
       <section id="screen-register-2" class="screen">
         <header class="screen-header">
           <button class="back-btn" data-next="screen-register-1">←</button>
@@ -105,49 +109,49 @@
         </header>
 
         <div class="screen-content">
-          <h2 class="screen-title">Datos del contacto</h2>
+          <h2 class="screen-title">Datos de contacto</h2>
 
           <form id="form-register-2" novalidate>
             <p class="field-group-title">Ingresar dirección</p>
 
             <label class="field">
               <span class="field-label">Calle</span>
-              <input type="text" name="calle" placeholder="Calle" required />
+              <input type="text" name="calle" required />
             </label>
 
             <div class="field-row">
               <label class="field small">
                 <span class="field-label">CP</span>
-                <input type="text" name="cp" placeholder="CP" required />
+                <input type="text" name="cp" required />
               </label>
               <label class="field small">
                 <span class="field-label">Num Int</span>
-                <input type="text" name="numInt" placeholder="Número..." />
+                <input type="text" name="numInt" />
               </label>
               <label class="field small">
                 <span class="field-label">Num Ext</span>
-                <input type="text" name="numExt" placeholder="Número..." />
+                <input type="text" name="numExt" required />
               </label>
             </div>
 
             <label class="field">
               <span class="field-label">Alcaldía</span>
-              <input type="text" name="alcaldia" placeholder="Alcaldía" />
+              <input type="text" name="alcaldia" />
             </label>
 
             <label class="field">
               <span class="field-label">Número de teléfono</span>
-              <input type="tel" name="telefono" placeholder="Ingresar número" />
+              <input type="tel" name="telefono" />
             </label>
 
             <button id="btn-register-2" type="button" class="btn btn-primary">
-              Continuar
+              Crear cuenta
             </button>
           </form>
         </div>
       </section>
 
-      <!-- PANTALLA 4: LOGIN -->
+      <!-- LOGIN -->
       <section id="screen-login" class="screen">
         <header class="screen-header">
           <button class="back-btn" data-next="screen-welcome">←</button>
@@ -160,89 +164,64 @@
           <form id="form-login" novalidate>
             <label class="field">
               <span class="field-label">Correo electrónico</span>
-              <input type="email" name="correoLogin" placeholder="Ingresar correo" required />
+              <input type="email" name="correoLogin" required />
             </label>
 
             <label class="field">
               <span class="field-label">Contraseña</span>
-              <input type="password" name="passwordLogin" placeholder="Ingresar contraseña" required />
+              <input type="password" name="passwordLogin" required />
             </label>
 
-            <button type="submit" class="btn btn-primary">
-              Entrar
-            </button>
+            <button type="submit" class="btn btn-primary">Entrar</button>
           </form>
         </div>
       </section>
 
-      <!-- PANTALLA 5: HOME / DASHBOARD -->
+      <!-- HOME CLIENTE -->
       <section id="screen-home" class="screen">
         <header class="screen-header home-header">
           <div class="icon-btn">☰</div>
-          <button class="btn-outline-sm" data-next="screen-welcome">
-            Salir de la cuenta
-          </button>
+          <button class="btn-outline-sm" onclick="logout()">Salir</button>
           <div class="icon-btn">🔔</div>
         </header>
 
         <div class="screen-content home-content">
-          <div class="home-welcome-row">
-            <h2 class="home-welcome">
-              Bienvenido <span id="welcome-username">Usuario</span>
-            </h2>
-            <div class="icon-btn person">👤</div>
-          </div>
+          <h2 class="home-welcome">
+            Bienvenido <span id="welcome-username">Usuario</span>
+          </h2>
 
-          <!-- Mascotas -->
+          <!-- MASCOTAS -->
           <div class="pets-list">
-            <!-- AQUÍ JS va a dibujar las tarjetas de las mascotas -->
             <div id="pets-container"></div>
 
-            <!-- fila para agregar nueva mascota -->
             <div class="add-pet-row">
-              <input
-                type="text"
-                placeholder="Agregar mascota"
-                class="input-line"
-                readonly
-              />
-              <!-- sigue enviando al formulario de registrar mascota -->
+              <input type="text" class="input-line" placeholder="Agregar mascota" readonly />
               <button class="icon-round" data-next="screen-pet-register">＋</button>
             </div>
           </div>
 
-          <!-- Dirección -->
+          <!-- DIRECCIÓN -->
           <div class="address-row">
-            <input
-              type="text"
-              id="home-address"
-              value="Colima 242, Roma Norte, Cuauhtémoc, CDMX"
-              class="input-line"
-            />
-            <button id="btn-use-location" class="icon-round">📍</button>
+  <input id="home-address" class="input-line" />
+  <button id="btn-use-location" class="icon-round">📍</button>
+</div>
 
-          </div>
 
-          <!-- Mapa -->
+          <!-- MAPA -->
           <div class="map-card">
-            <iframe
-              id="map-iframe"
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            <iframe id="map-iframe" loading="lazy"></iframe>
           </div>
 
-          <!-- Agendar paseo -->
+          <!-- AGENDAR PASEO -->
           <div class="schedule-row">
             <button class="input-line button-like" data-next="screen-schedule-walk">
               Agendar paseo
             </button>
-            <button class="icon-round">📅</button>
           </div>
         </div>
       </section>
 
-      <!-- PANTALLA 6: REGISTRAR MASCOTA -->
+      <!-- REGISTRO MASCOTA -->
       <section id="screen-pet-register" class="screen">
         <header class="screen-header">
           <button class="back-btn" data-next="screen-home">←</button>
@@ -250,59 +229,40 @@
         </header>
 
         <div class="screen-content">
-          <h2 class="screen-title">Regístrar a tu mascota</h2>
+          <h2 class="screen-title">Registrar mascota</h2>
 
-          <form id="form-pet-register" novalidate>
+          <form id="form-pet-register">
             <label class="field">
               <span class="field-label">Nombre</span>
-              <input type="text" name="nombreMascota" placeholder="Únicamente un nombre" required />
+              <input name="nombreMascota" required />
             </label>
 
             <label class="field">
               <span class="field-label">Raza</span>
-              <input type="text" name="raza" placeholder="Raza" />
+              <input name="raza" />
             </label>
 
             <label class="field">
               <span class="field-label">Edad</span>
-              <input type="number" name="edad" placeholder="Ingresar número" />
+              <input type="number" name="edad" />
             </label>
 
             <label class="field">
-              <span class="field-label">Peso aproximado</span>
-              <input type="number" name="peso" placeholder="Kg" />
+              <span class="field-label">Peso (kg)</span>
+              <input type="number" name="peso" />
             </label>
 
             <label class="field">
               <span class="field-label">Tamaño</span>
-              <input type="text" name="tamano" placeholder="CH, M, G" />
+              <input name="tamano" />
             </label>
 
-            <div class="field-row">
-              <label class="field">
-                <span class="field-label">Género</span>
-                <select name="genero" class="select-line">
-                  <option value="">H/M</option>
-                  <option value="hembra">Hembra</option>
-                  <option value="macho">Macho</option>
-                </select>
-              </label>
-              <label class="field">
-                <span class="field-label">Esterilizado/Castrado</span>
-                <select name="esterilizado" class="select-line">
-                  <option value="">SI/NO</option>
-                  <option value="si">Sí</option>
-                  <option value="no">No</option>
-                </select>
-              </label>
-            </div>
-
-            <button type="submit" class="btn btn-primary">Guardar mascota</button>
+            <button class="btn btn-primary" type="submit">Guardar mascota</button>
           </form>
         </div>
       </section>
 
-      <!-- PANTALLA 7: AGENDAR PASEO (CALENDARIO) -->
+      <!-- AGENDAR PASEO -->
       <section id="screen-schedule-walk" class="screen">
         <header class="screen-header">
           <button class="back-btn" data-next="screen-home">←</button>
@@ -311,83 +271,48 @@
 
         <div class="screen-content">
           <h2 class="screen-title">Agendar paseo</h2>
-          <p class="subtitle-center">Seleccionar mascota que requiere paseo</p>
 
-          <!-- Contenedor para las mascotas a seleccionar en Agendar Paseo -->
-          <div class="pets-horizontal" id="pets-schedule-container"></div>
+          <p class="subtitle-center">Selecciona las mascotas</p>
+          <div id="pets-schedule-container" class="pets-horizontal"></div>
 
-          <p class="subtitle-center">Seleccionar día</p>
+          <p class="subtitle-center">Selecciona turno</p>
+          <select id="turno-select" class="input-line">
+            <option value="mañana">Mañana</option>
+            <option value="tarde">Tarde</option>
+          </select>
 
-<div class="calendar-card">
-  <input type="date" id="walk-date" class="input-line" />
-</div>
-
-
-          <button class="btn btn-primary" data-next="screen-vip-pets">
+          <button class="btn btn-primary" id="btn-go-vip" data-next="screen-vip-pets">
             Continuar
           </button>
         </div>
       </section>
 
-      <!-- PANTALLA 8: VIP PETS (DETALLE DEL PASEO) -->
-      <section id="screen-vip-pets" class="screen">
-        <header class="screen-header">
-          <button class="back-btn" data-next="screen-schedule-walk">←</button>
-          <h1 class="app-title">VIP PETS</h1>
-        </header>
-
-        <div class="screen-content">
-          <h2 class="screen-title">Agendar paseo</h2>
-          <p class="subtitle-center">Seleccionar mascota que requiere paseo</p>
-
-          <!-- Contenedor para las mascotas a seleccionar en VIP Pets -->
-          <div class="pets-horizontal" id="pets-vip-container"></div>
-
-          <form id="form-vip-walk" novalidate>
-  <div class="field-row">
-    <label class="field">
-      <span class="field-label">Turno del día</span>
-      <select name="diaVip" class="select-line">
-        <option value="">Seleccionar turno</option>
-        <option value="manana">Mañana</option>
-        <option value="tarde">Tarde</option>
-      </select>
-    </label>
-  </div>
-
-            <button type="submit" class="btn btn-primary">
-              Confirmar paseo
-            </button>
-          </form>
-        </div>
-      </section>
-      <!-- PANTALLA 9: PASEO CONFIRMADO -->
-      <section id="screen-walk-confirmed" class="screen">
+      <!-- CONFIRMAR PASEO -->
+      <section id="screen-confirm" class="screen">
         <header class="screen-header">
           <h1 class="app-title">PAWGO</h1>
         </header>
 
         <div class="screen-content confirm-content">
           <div class="confirm-icon">✅</div>
-          <h2 class="screen-title">Paseo confirmado</h2>
-          <p id="confirmed-text" class="confirm-text">
-            Tu paseo ha sido agendado correctamente.
-          </p>
+          <h2>Paseo confirmado</h2>
+          <p id="confirmed-text"></p>
+          <button id="btnVerRuta" class="btn btn-primary">Ver ruta del cuidador</button>
 
-          <button class="btn btn-primary" data-next="screen-home">
-            Volver al inicio
-          </button>
+
+          <button class="btn btn-primary" data-next="screen-home">Volver al inicio</button>
         </div>
       </section>
 
     </main>
   </div>
 
-  <!-- JS modular -->
+  <!-- Scripts -->
   <script src="state.js"></script>
   <script src="api.js"></script>
   <script src="auth.js"></script>
   <script src="pets.js"></script>
   <script src="map.js"></script>
+
 </body>
 </html>
