boton cancelar y ver proximos paseos cliente

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -257,6 +257,15 @@
             </button>
             <button class="icon-round">📅</button>
           </div>
+
+                    <!-- Próximos paseos del cliente -->
+          <div class="card">
+            <h3 class="section-title">Tus próximos paseos</h3>
+            <div id="client-reservas" class="reservas-list">
+              <!-- Aquí JS dibuja las reservas del cliente -->
+            </div>
+          </div>
+
         </div>
       </section>
 
@@ -570,6 +579,7 @@
   <script src="pets.js"></script>
   <script src="map.js"></script>
   <script src="caregiver.js"></script>
+  <script src="client-reservas.js"></script>
 
 </body>
 </html>
