--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,11 +7,12 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  
   <div class="app-wrapper">
     <main class="phone-frame">
 
       <!-- PANTALLA 1: BIENVENIDA -->
-      <section id="screen-welcome" class="screen active">
+      <section id="screen-welcome" class="screen">
         <div class="screen-content">
           <h1 class="app-title app-title-center">PAWGO</h1>
 
@@ -194,13 +195,30 @@
       </section>
 
       <!-- PANTALLA 5: HOME / DASHBOARD -->
-      <section id="screen-home" class="screen">
+      
+      <section id="screen-home" class="screen active">
         <header class="screen-header home-header">
           <div class="icon-btn">☰</div>
           <button class="btn-outline-sm" data-next="screen-welcome">
             Salir de la cuenta
           </button>
           <div class="icon-btn">🔔</div>
+          <!-- SIDEBAR -->
+<div id="sidebar" class="sidebar">
+  <div class="sidebar-header">
+    <h2>PAWGO</h2>
+    <button id="close-sidebar">✖</button>
+  </div>
+
+  <ul class="sidebar-menu">
+    <li data-next="screen-home">🏠 Inicio</li>
+    <li data-next="screen-pet-register">🐶 Registrar mascota</li>
+    <li data-next="screen-schedule-walk">📅 Agendar paseo</li>
+    <li data-next="screen-login">👤 Mi cuenta</li>
+    <li data-next="screen-welcome">🚪 Cerrar sesión</li>
+  </ul>
+</div>
+
         </header>
 
         <div class="screen-content home-content">
@@ -257,7 +275,6 @@
             </button>
             <button class="icon-round">📅</button>
           </div>
-
                     <!-- Próximos paseos del cliente -->
           <div class="card">
             <h3 class="section-title">Tus próximos paseos</h3>
@@ -513,7 +530,6 @@
           </button>
         </div>
       </section>
-
       <!-- PANTALLA 8: VIP PETS (DETALLE DEL PASEO) -->
       <section id="screen-vip-pets" class="screen">
         <header class="screen-header">
