--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PAWGO</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <div class="app-wrapper">
-    <main class="phone-frame">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PAWGO</title>
+    <link rel="stylesheet" href="styles.css" />
 
-      <!-- PANTALLA 1: BIENVENIDA -->
-      <section id="screen-welcome" class="screen active">
-        <div class="screen-content">
-          <h1 class="app-title app-title-center">PAWGO</h1>
+    <!-- AGREGAR FAVICON (icono en la pestaña) -->
+    <link rel="icon" href="perro.png" type="image/png" />
 
-          <!-- Logo -->
-          <div class="logo-box">
-            <!-- Reemplaza por tu logo si quieres -->
-            <span class="logo-paws">🐾🐾</span>
-          </div>
+    <!-- Para que el título aparezca correctamente en dispositivos móviles -->
+    <meta name="apple-mobile-web-app-title" content="PAWGO" />
+    <meta name="application-name" content="PAWGO" />
+  </head>
+  <body>
+    <div class="app-wrapper">
+      <main class="phone-frame">
+        <!-- PANTALLA 1: BIENVENIDA BN1 -->
+        <section id="screen-welcome" class="screen active">
+          <div class="screen-content">
+            <h1 class="app-title app-title-center">PAWGO</h1>
+
+            <!-- Logo - IMAGEN ACTUALIZADA -->
+            <div class="logo-box">
+              <img src="perro.png" alt="PAWGO Logo" class="pawgo-logo" />
+            </div>
+
+            <!-- El resto de tu código se mantiene igual... -->
 
             <div class="block">
               <p class="section-title">Iniciar sesión</p>
